more alignment fixes

--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  margin: 21rem 0 40rem 0;
+  margin: 21rem 0 23rem 0;
   align-items: center;
   justify-content: center;
   font-size: 1.5rem;
@@ -27,7 +27,7 @@
 @media (max-width: 390px) {
   .contact-container {
     font-size: .75rem;
-    margin: 21rem 0 19rem 0;
+    margin: 21rem 0 18rem 0;
   
     h1 {
       margin: .5rem;
