--- a/src/styles/info.scss
+++ b/src/styles/info.scss
@@ -233,7 +233,7 @@
     height: 89vh;
 
     .call-to-action {
-      margin-top: 3rem;
+      margin-top: 2rem;
       font-size: 2rem;
     }
   }
